testdata/repos/standalone/SourcingCheck/InvalidSlot/InvalidSlot-3.ebuild
EAPI=7
DESCRIPTION="Ebuild with invalid SLOT"
HOMEPAGE="https://github.com/pkgcore/pkgcheck"
LICENSE="BSD"
SLOT="0/foo?"
